--- a/employee-directory/src/Components/style.css
+++ b/employee-directory/src/Components/style.css
@@ -5,7 +5,7 @@ li {
 	flex-direction: row;
 	align-items: center;
 	align-content: space-between;
-	border-color: aliceblue;
-	box-sizing: ;
+	border-color: ;
+
 
 }
